--- a/build.xml
+++ b/build.xml
@@ -35,10 +35,15 @@
         <delete dir="${dist.dir}"/>
         <delete dir="${build.dir}"/>
     </target>
+    <target name="download">
+        <exec executable="bash" dir="./">
+          <arg value="install.sh"/>
+        </exec>
+    </target>
     <target name="javadoc">
         <javadoc classpathref="libraries" packagenames="org.gem.engine.*" sourcepath="${src.dir}" destdir="${javadoc.report.dir}" author="true" version="true" use="true" windowtitle="OpenGEM Java Core API"/>
     </target>
-    <target name="compile-sources" depends="clean">
+    <target name="compile-sources" depends="clean,download">
         <mkdir dir="${classes.dir}"/>
         <javac fork="no" debug="true" destdir="${classes.dir}" classpathref="libraries" includes="org/**/*.java org/**/*.txt" srcdir="${src.dir}"/>
     </target>
