--- a/build.xml
+++ b/build.xml
@@ -45,11 +45,14 @@
     </target>
     <target name="compile-sources" depends="clean,download">
         <mkdir dir="${classes.dir}"/>
-        <javac fork="no" debug="true" destdir="${classes.dir}" classpathref="libraries" includes="org/**/*.java org/**/*.txt" srcdir="${src.dir}"/>
+        <javac fork="no" debug="true" destdir="${classes.dir}" classpathref="libraries" includes="org/**/*.java" srcdir="${src.dir}"/>
     </target>
     <target name="compile" depends="compile-sources">
         <mkdir dir="${dist.dir}"/>
-        <jar destfile="${dist.dir}/opensha-lite.jar" basedir="${classes.dir}" includes="**/*.class **/*.txt"/>
+        <jar destfile="${dist.dir}/opensha-lite.jar">
+		<fileset dir="${classes.dir}" includes="**/*.class"/>
+		<fileset dir="${src.dir}" includes="**/*.txt"/>
+	</jar>
     </target>
     <taskdef resource="emma_ant.properties" classpathref="libraries"/>
     <target name="junit-tests-with-coverage" depends="compile">
