--- a/.classpath
+++ b/.classpath
@@ -4,23 +4,69 @@
 	<classpathentry kind="src" path="java"/>
 	<classpathentry kind="src" path="data"/>
 	<classpathentry kind="src" path="test_data"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.4.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://commons.apache.org/lang/api-release/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/junit-4.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-configuration-1.6.jar"/>
-	<classpathentry kind="lib" path="lib/emma_ant.jar"/>
-	<classpathentry kind="lib" path="lib/emma.jar"/>
-	<classpathentry kind="lib" path="lib/gson-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/memcached-2.5.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/dom4j.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/activation.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/BrowserLauncher2-1_3.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/DBConnection.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/dom4j.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/emma.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/emma_ant.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/f2jutil.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/gson-1.5.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/gson-1.5-sources.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/hamcrest-all-1.2.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/isti.util.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/itext-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jaas.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/Jama-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jax-qname.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jaxrpc-api.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jaxrpc-impl.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jcommon-1.0.5.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jfreechart-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jh.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jpedal.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/jta-spec1_0_1.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/junit-4.5.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/lambdaj-2.1-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/log4j-1.2.4.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/lombok.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/mail.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/memcached-2.5.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/mockito-all-1.8.2.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/mysql-connector-java-3.1.6-bin.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/namespace.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/ncCore-4.0.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/nnls.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/ojdbc5.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/oscache-2.4.1.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/poi-2.5.1-final-20040804.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/relaxngDatatype.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/saaj-api.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/saaj-impl.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/scec_vdo.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/sdoapi.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/standard.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/USGSUtils.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/xercesSamples.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/xmlParserAPIs.jar"/>
+	<classpathentry kind="lib" path="/home/marcop/Projects/OpenSHA-libraries/lib/xsdlib.jar"/>
 	<classpathentry kind="output" path="classes/"/>
 </classpath>
